[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "parallel-db/*.py",
  "/tests",
]

[project]
name = "parallel-db"
version = "0.0.1"
authors = [
  { name="zkh-dot", email="kernzahar@gmail.com" },
]
description = "Pacage for high level database parallel  automatization"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Zkh-dot/parallel-db"
Issues = "https://github.com/Zkh-dot/parallel-db/issues"